headers/os/media/MediaDefs.h
@@ -604,6 +604,9 @@ public:
 	const void*		MetaData() const;
 	int32			MetaDataSize() const;
 
+	void			Unflatten(const char *flatBuffer);
+	void			Clear();
+
 					media_format();
 					media_format(const media_format& other);
 					~media_format();
