src/kits/media/MediaExtractor.cpp
@@ -96,8 +96,7 @@ MediaExtractor::_Init(BDataIO* source, int32 flags)
 		fStreamInfo[i].chunkCache
 			= new ChunkCache(fExtractorWaitSem, kMaxCacheBytes);
 		fStreamInfo[i].lastChunk = NULL;
-		memset(&fStreamInfo[i].encodedFormat, 0,
-			sizeof(fStreamInfo[i].encodedFormat));
+		fStreamInfo[i].encodedFormat.Clear();
 
 		if (fStreamInfo[i].chunkCache->InitCheck() != B_OK) {
 			fInitStatus = B_NO_MEMORY;
