src/kits/media/TrackReader.cpp
@@ -135,7 +135,7 @@ void
 BTrackReader::SetToTrack(BMediaTrack *track)
 {	
 	media_format fmt;
-	memset(&fmt, 0, sizeof(fmt)); //wildcard
+	fmt.Clear(); //wildcard
 	memcpy(&fmt.u.raw_audio, &fFormat, sizeof(fFormat));
 	fmt.type = B_MEDIA_RAW_AUDIO;
 	//try to find a output format
